<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightPrimary">

    <LinearLayout
        android:id="@+id/addLocForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addLocTxtTtl"
            android:textAlignment="center"
            android:textColor="@color/blackText"
            android:textSize="@dimen/splashTxtSize"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addLocText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/addLocationTxtSize"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:text="@string/addLocationTxt"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/completeTxtSize"
                android:text="@string/birthDateTxt"/>
            <EditText
                android:id="@+id/addLocBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/birthDateHintTxt"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">
            <Button
                android:id="@+id/addLocContinueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/btnColor"
                android:layout_margin="@dimen/btnMargin"
                android:text="@string/CompDetContinue"
                android:enabled="false"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>