<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layoutDirection="ltr">

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mainLoginEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailLoginHint"
                android:textAlignment="center"
                android:layout_margin="@dimen/editTextMargin"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mainLoginPassField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordLoginHint"
                android:textAlignment="center"
                android:layout_margin="@dimen/editTextMargin"/>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/logRegCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logRegCheckBoxTxt"
            android:layout_gravity="left"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.3"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layoutDirection="ltr">


        <Button
            android:id="@+id/registerBtn"
            android:layout_weight="1"
            android:text="@string/mainRegisterBtn"
            android:layout_margin="@dimen/btnMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnColor"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_weight="1"
            android:text="@string/mainLoginBtn"
            android:layout_margin="@dimen/btnMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

    </LinearLayout>

</LinearLayout>